--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@microsoft/signalr": "^6.0.1",
     "bootstrap": "^5.1.0",
+    "google-auth-library": "^7.11.0",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.5.1",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-maps": "^9.4.5",
+    "react-google-login": "^5.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
