- Added Login, Logout and Registration

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,15 @@
 {
+  "CsunDasDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "CsunFsaeDas",
+    "UserCollectionName": "User"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "298592974193-geie5ngtkeh0qpt9kaofts6870rskh8k.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
