--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.1.0",
     "google-auth-library": "^7.11.0",
     "http-proxy-middleware": "^0.19.1",
+    "javascript-cookies": "^1.0.5",
     "jquery": "^3.5.1",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
