--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -14,10 +14,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.6",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "reactstrap": "^8.9.0",
+    "redux": "^4.1.2",
     "rimraf": "^2.6.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
