- Updated racehub to include speedometer model to handle json message. - Updated LiveRace page to be authorized.

--- a/DAS-Server-SignalR.csproj
+++ b/DAS-Server-SignalR.csproj
@@ -10,7 +10,7 @@
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
     <SpaProxyServerUrl>https://localhost:44438</SpaProxyServerUrl>
     <SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
-    <RootNamespace>CSUN-DAS-Server</RootNamespace>
+    <RootNamespace>DAS_Server_SignalR</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
